fixed gaps for phone

--- a/src/components/TeamCard/TeamCard.scss
+++ b/src/components/TeamCard/TeamCard.scss
@@ -6,8 +6,10 @@
   max-width: 292px;
   min-height: 392px;
   max-height: 500px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 3em 2.5em 0;
+  @media (max-width: 320px) {
+    margin: 3em 10px 0;
+  }
   border-radius: 27px;
   padding-bottom: 10px;
   background:  
@@ -66,7 +68,6 @@
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
-  gap: 4rem;
   justify-content: center;
   width: 80%;
 }
